<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Patient Tracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_patient">Add Patient</string>
    <string name="action_search">Search...</string>
    <string name="title_activity_patient">Add patient</string>
    <string name="patient_name">Patient name</string>
    <string name="email">Email</string>
    <string name="arrival_date">Date of arrival</string>
    <string name="set_date">Set date</string>
    <string name="telephone">Tel</string>
    <string name="disease">Disease</string>
    <string name="medication">Medication</string>
    <string name="cost">Cost</string>
    <string name="usd">$</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="err_required">This field is required</string>
    <string name="title_activity_patient_detail">Details of Patient</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_patient">Edit patient</string>
    <string name="title_activity_search">Search</string>
    <string name="search">Search</string>
    <string name="arrival_date_from">Arrival date from</string>
    <string name="arrival_date_to">Arrival date to</string>
    <string name="clear">Clear</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="rupee">₹</string>

</resources>
